styled content still need to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,63 @@
 body {
   background-color: hsl(30, 38%, 92%);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .btn {
   background-color: hsl(158, 36%, 37%);
+  min-width: 100%;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  color: white;
+  height: 2.5rem;
+  border-radius: 10px;
 }
+
+.card {
+  background-color: white;
+  color: hsl(212, 21%, 14%);
+  display: flex;
+  justify-content: space-evenly;
+  height: 500px;
+  width: 600px;
+  border-radius: 2.5%;
+}
+
+.container {
+  padding: 2rem;
+  /* padding-left: 2rem;
+  padding-right: 0.3375rem;
+  margin-right: 1.5rem;
+  padding-top: 1rem; */
+}
+
+.description {
+  margin-bottom: 0;
+}
+
+img {
+  max-width: 100%;
+  border-radius: 2.5% 0% 0% 2.5%;
+}
+
+.price {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-family: 'Fraunces', serif;
+  color: hsl(158, 36%, 37%);
+}
+
+.price p {
+  text-decoration: line-through;
+  font-family: 'Montserrat', sans-serif;
+  color: hsl(228, 12%, 48%);
+}
+
+/* .priceP {
+  margin-bottom: 0;
+} */
